tests/snapshots/diff_commands__diff.snap
---
source: tests/diff_commands.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────↑─────────────Chats─────────────┐"
"│ ✦ Kwek                                                                                                                       █ 󰍩  Kwek                       │"
"│ ℹ Command chat successful in 0 seconds                                                                                       █                               │"
"│ No changes                                                                                                                   █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│ ℹ Command exec successful in 0 seconds                                                                                       █                               │"
"│ diff --git a/hello.txt b/hello.txt                                                                                           █                               │"
"│ index 5dd01c1..cc628cc 100644                                                                                                █                               │"
"│ --- a/hello.txt                                                                                                              █                               │"
"│ +++ b/hello.txt                                                                                                              █                               │"
"│ @@ -1 +1 @@                                                                                                                  █                               │"
"│ -Hello, world!                                                                                                               █                               │"
"│ \ No newline at end of file                                                                                                  █                               │"
"│ +world                                                                                                                       █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █─────────Chat commands─────────┤"
"│                                                                                                                              █                               │"
"│                                                                                                                              ║  /new_chat       /help        │"
"│                                                                                                                              ║  /delete_chat    /quit        │"
"│                                                                                                                              ║  /copy           /show_config │"
"│                                                                                                                              ║  /diff           /index_repos │"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ║──────────Keybindings──────────┤"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ║ Page Up/Down - Scroll         │"
"│                                                                                                                              ↓ End - Scroll to end           │"
"├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤ Tab - Next chat               │"
"│  Send a message to an agent ...                                                                                              │ ^s - Send message             │"
"│                                                                                                                              │ ^x - Stop agent               │"
"│                                                                                                                              │ ^n - New chat                 │"
"│                                                                                                                              │ ^q - Quit                     │"
"│                                                                                                                              │                               │"
"│                                                                                                                              │                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────┘"
"                                                                                  uuid: a1a2a3a4-b1b2-c1c2-d1d2-d3d4d5d6d7d8   branch-name: kwaak/kwek-a1a2a3a4 "
"                                                                                                                                                                "
